// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`eip-2612 permit helpers buildPermitTypedData() 1`] = `
{
  "domain": {
    "chainId": 56,
    "name": "1INCH Token",
    "verifyingContract": "0x111111111117dc0aa78b770fa6a738034120c302",
    "version": "1",
  },
  "message": {
    "deadline": 192689033,
    "nonce": 0,
    "owner": "0x2c9b2dbdba8a9c969ac24153f5c1c23cb0e63914",
    "spender": "0x11111112542d85b3ef69ae05771c2dccff4faa26",
    "value": "1000000000",
  },
  "primaryType": "Permit",
  "types": {
    "Permit": [
      {
        "name": "owner",
        "type": "address",
      },
      {
        "name": "spender",
        "type": "address",
      },
      {
        "name": "value",
        "type": "uint256",
      },
      {
        "name": "nonce",
        "type": "uint256",
      },
      {
        "name": "deadline",
        "type": "uint256",
      },
    ],
  },
}
`;

exports[`eip-2612 permit helpers buildPermitTypedData({isDomainWithoutVersion: true}) 1`] = `
{
  "domain": {
    "chainId": 56,
    "name": "1INCH Token",
    "verifyingContract": "0x111111111117dc0aa78b770fa6a738034120c302",
  },
  "message": {
    "deadline": 192689033,
    "nonce": 0,
    "owner": "0x2c9b2dbdba8a9c969ac24153f5c1c23cb0e63914",
    "spender": "0x11111112542d85b3ef69ae05771c2dccff4faa26",
    "value": "1000000000",
  },
  "primaryType": "Permit",
  "types": {
    "Permit": [
      {
        "name": "owner",
        "type": "address",
      },
      {
        "name": "spender",
        "type": "address",
      },
      {
        "name": "value",
        "type": "uint256",
      },
      {
        "name": "nonce",
        "type": "uint256",
      },
      {
        "name": "deadline",
        "type": "uint256",
      },
    ],
  },
}
`;

exports[`eip-2612 permit helpers buildPermitTypedData({isSaltInsteadOfChainId: true, isDomainWithoutVersion: true}) 1`] = `
{
  "domain": {
    "name": "USD Coin (PoS)",
    "salt": "0x0000000000000000000000000000000000000000000000000000000000000089",
    "verifyingContract": "0x2791Bca1f2de4661ED88A30C99A7a9449Aa84174",
  },
  "message": {
    "deadline": 192689033,
    "nonce": 0,
    "owner": "0x2c9b2dbdba8a9c969ac24153f5c1c23cb0e63914",
    "spender": "0x11111112542d85b3ef69ae05771c2dccff4faa26",
    "value": "1000000000",
  },
  "primaryType": "Permit",
  "types": {
    "Permit": [
      {
        "name": "owner",
        "type": "address",
      },
      {
        "name": "spender",
        "type": "address",
      },
      {
        "name": "value",
        "type": "uint256",
      },
      {
        "name": "nonce",
        "type": "uint256",
      },
      {
        "name": "deadline",
        "type": "uint256",
      },
    ],
  },
}
`;

exports[`eip-2612 permit helpers buildPermitTypedData({isSaltInsteadOfChainId: true}) 1`] = `
{
  "domain": {
    "name": "USD Coin (PoS)",
    "salt": "0x0000000000000000000000000000000000000000000000000000000000000089",
    "verifyingContract": "0x2791Bca1f2de4661ED88A30C99A7a9449Aa84174",
    "version": "1",
  },
  "message": {
    "deadline": 192689033,
    "nonce": 0,
    "owner": "0x2c9b2dbdba8a9c969ac24153f5c1c23cb0e63914",
    "spender": "0x11111112542d85b3ef69ae05771c2dccff4faa26",
    "value": "1000000000",
  },
  "primaryType": "Permit",
  "types": {
    "Permit": [
      {
        "name": "owner",
        "type": "address",
      },
      {
        "name": "spender",
        "type": "address",
      },
      {
        "name": "value",
        "type": "uint256",
      },
      {
        "name": "nonce",
        "type": "uint256",
      },
      {
        "name": "deadline",
        "type": "uint256",
      },
    ],
  },
}
`;

exports[`eip-2612 permit helpers fromRpcSig() 1`] = `
{
  "r": {
    "data": [
      59,
      68,
      130,
      22,
      167,
      143,
      145,
      232,
      77,
      176,
      108,
      245,
      78,
      177,
      227,
      117,
      132,
      37,
      189,
      151,
      255,
      185,
      214,
      148,
      28,
      228,
      55,
      236,
      122,
      156,
      44,
      23,
    ],
    "type": "Buffer",
  },
  "s": {
    "data": [
      76,
      148,
      241,
      250,
      73,
      32,
      7,
      222,
      163,
      163,
      195,
      5,
      53,
      59,
      243,
      67,
      11,
      28,
      165,
      6,
      221,
      99,
      12,
      225,
      253,
      61,
      160,
      155,
      211,
      135,
      178,
      243,
    ],
    "type": "Buffer",
  },
  "v": 28,
}
`;

exports[`eip-2612 permit helpers fromRpcSig() should support both versions of \`eth_sign\` responses 1`] = `
{
  "r": {
    "data": [
      59,
      68,
      130,
      22,
      167,
      143,
      145,
      232,
      77,
      176,
      108,
      245,
      78,
      177,
      227,
      117,
      132,
      37,
      189,
      151,
      255,
      185,
      214,
      148,
      28,
      228,
      55,
      236,
      122,
      156,
      44,
      23,
    ],
    "type": "Buffer",
  },
  "s": {
    "data": [
      76,
      148,
      241,
      250,
      73,
      32,
      7,
      222,
      163,
      163,
      195,
      5,
      53,
      59,
      243,
      67,
      11,
      28,
      165,
      6,
      221,
      99,
      12,
      225,
      253,
      61,
      160,
      155,
      211,
      135,
      178,
      243,
    ],
    "type": "Buffer",
  },
  "v": 53,
}
`;

exports[`eip-2612 permit helpers getPermitContractCallParams() 1`] = `
[
  "0x2c9b2dbdba8a9c969ac24153f5c1c23cb0e63914",
  "0x11111112542d85b3ef69ae05771c2dccff4faa26",
  "1000000000",
  192689033,
  28,
  {
    "data": [
      59,
      68,
      130,
      22,
      167,
      143,
      145,
      232,
      77,
      176,
      108,
      245,
      78,
      177,
      227,
      117,
      132,
      37,
      189,
      151,
      255,
      185,
      214,
      148,
      28,
      228,
      55,
      236,
      122,
      156,
      44,
      23,
    ],
    "type": "Buffer",
  },
  {
    "data": [
      76,
      148,
      241,
      250,
      73,
      32,
      7,
      222,
      163,
      163,
      195,
      5,
      53,
      59,
      243,
      67,
      11,
      28,
      165,
      6,
      221,
      99,
      12,
      225,
      253,
      61,
      160,
      155,
      211,
      135,
      178,
      243,
    ],
    "type": "Buffer",
  },
]
`;
